tests/Tuc/Fixtures/errors/MissingUseCase.tuc
tuc parse error test
participants
    GenericService parts

GenericService
    do nothing

tuc without a use-case
participants
    GenericService parts
